@@ -1,4 +1,7 @@
 1.17 -> 2.0:
+    - devzero2000: check secure_getenv for glibc 2.17 correctly
+      Use secure_getenv if it is available.
+      Fall back to __secure_getenv if it is not. 
     - devzero2000: check secure_getenv for glibc 2.17
       In glibc 2.17, __secure_getenv was renamed to secure_getenv.
       So check also for it.
